--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             "color": "#ff0019",
             "messages": [
               "Anh Yêu Em",
-              "Test 1",
-              "Test 2"
+              "Hello",
+              "Hiii"
             ],
-            "music": "//thanhdieu.com/music.mp3"
+            "music": "https://www.youtube.com/watch?v=jPjQJYKhhk4"
           },
           "clientId": "/"
         },
